[package]
name = "u-numflow"
version = "0.2.0"
edition = "2021"
authors = ["iyulab"]
license = "MIT"
description = "Mathematical primitives for the U-Engine ecosystem: statistics, probability, random sampling, and collections."
repository = "https://github.com/iyulab/u-numflow"
keywords = ["statistics", "probability", "optimization", "mathematics"]
categories = ["mathematics", "science"]
readme = "README.md"

[dependencies]
rand = "0.9"

[dev-dependencies]
proptest = "1.4"
